# Archivist

./: .gitignore  README.md  archivist.yaml  pyproject.toml  recovery-plan.md
archivist/: __init__.py  cli.py  config.py  exceptions.py  log.py  models.py  pipeline.py
archivist/chunking/: __init__.py  recursive.py
archivist/embedding/: __init__.py  base.py  local.py  voyage.py
archivist/extractors/: __init__.py  base.py  epub.py  markdown.py  pdf.py  plaintext.py  video.py
archivist/image/: __init__.py  embedder.py  extractor.py
archivist/mcp/: __init__.py  server.py
archivist/metadata/: __init__.py  content_scanner.py  family_tagger.py  filename_parser.py  review_queue.py  sidecar.py
archivist/retrieval/: __init__.py  models.py  reranker.py  retriever.py
archivist/storage/: __init__.py  qdrant.py  setup.py
archivist/tagger_backends/: __init__.py  anthropic.py  base.py  ollama.py  prompt.py
archivist/versioning/: __init__.py  delta_engine.py  version_index.py  version_parser.py
docs/: phase-2-plan.md  python-api.md
tests/: conftest.py  test_cli.py  test_cli_search.py  test_config.py  test_exceptions.py  test_logging.py  test_models.py  test_pipeline.py  test_pipeline_e2e.py
tests/fixtures/: sample.md  sample.txt
tests/test_chunking/: test_recursive.py
tests/test_embedding/: test_factory.py  test_local.py  test_voyage.py
tests/test_extractors/: test_epub.py  test_markdown.py  test_pdf.py  test_plaintext.py  test_registry.py  test_video.py
tests/test_image/: test_embedder.py  test_extractor.py
tests/test_mcp/: test_server.py
(+17 files in other folders)
