[project]
name = "archivist"
version = "0.1.0"
description = "Version-aware document ingestion library for technical documentation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "qdrant-client>=1.9",
    "pymupdf4llm>=0.0.10",
    "ebooklib>=0.18",
    "faster-whisper>=1.0",
    "langchain-text-splitters>=0.2",
    "sentence-transformers>=3.0",
    "bitsandbytes>=0.43",
    "voyageai>=0.3",
    "ollama>=0.3",
    "anthropic>=0.30",
    "semver>=3.0",
    "numpy>=1.26",
    "mcp[cli]>=1.0",
]

[project.scripts]
archivist = "archivist.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
]
